--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,146 @@
 
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
+html,body,#app {
+    height: 100%;
+    width: 100%
+}
+#greenbar1{
+    height: 2px;
+    background-color: green;
+}
+
+#topnav{
+    margin:0;
+    border:none;
+    z-index:0;
+    padding-left:25%;
+    width: 100%;
+}
+#thirdnav,#secondnav{
+    @extend #topnav;
+    background-color: lightgrey;
+    font-weight: bold;
+    .navlang{
+        margin-left:10%;
+    }     
+}
+
+#thirdnav{
+    position: relative;
+}
+
+#logo,#logo2{
+    height:18%;
+    position: absolute;    
+    left:15%;
+    z-index:1;
+}
+
+#logo{
+    top:0;
+}
+#logo2{
+    bottom:0;
+    height: 200%;
+}
+
+#header{
+    margin:0;
+    padding:0;
+    height:80vh;
+    img{
+        width:100%;
+        height: 100%
+    }
+}
+#content{
+    min-height: 50vh;
+    background-color: #fff;
+
+    #header2{
+        width: 100%;
+        margin:0;
+        padding:0;
+        img{
+            height:400px;
+            width:100%
+        }
+    }
+
+    #sortBy{
+        padding:2% 15%;
+        #toggleFilter{
+            cursor: pointer;
+        }
+    }
+
+
+    #filter{
+        width:100%;
+        padding: 5% 15%;
+        display:none;
+        p{
+            margin:0;
+        }
+        
+    }
+
+    .auctions{
+        padding: 0 15%;
+        margin:0;
+
+        .auction{
+            img{
+                width: 90%;
+                height: 170px;
+                object-fit: cover;
+                vertical-align: middle;
+            }
+            p{
+                margin:0;
+                padding-left: 5%;
+            }
+            .btn{
+                width: 60%;
+                margin: 5% 20%;
+            }
+        }
+    }
+
+    .paginate{
+        text-align: center;
+    }
+    
+}
+
+#myauctions,#mybids,#watchlist,.profile{
+    padding: 0 15%;
+    width:100%;
+    img {
+        width: 170px;
+        height: 170px;
+        object-fit: cover;
+        vertical-align: middle;
+    }
+}
+
+#openauction{
+    padding: 0 15%;
+    width:100%;
+}
+
+
+footer{
+    width:100%;
+    .row{
+        width:100%;
+        padding: 5% 15%;
+        p{
+            margin:0;
+        }
+    }    
+}
+#greenbar2{
+    @extend #greenbar1;
+}
